--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -139,18 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2017, 9, 1)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
     "# Starting from the most recent data point in the database. \n",
-    "precipitation_data = session.query(Measurement).order_by(Measurement.date).filter()\n",
     "\n",
-    "group_by to create month groups?\n",
+    "#precipitation_data = session.query(Measurement.date, Measurement.prcp).order_by(Measurement.date).filter()\n",
+    "\n",
+    "#group_by to create month groups?\n",
+    "\n",
+    "year_precipitation = dt.date(2017, 8, 23) + dt.timedelta(days=365)\n",
+    "year_precipitation\n",
     "\n",
     "# Calculate the date one year from the last date in data set.\n",
-    "\n",
+    "one_year = dt.date(2016, 9, 1) + dt.timedelta(days=365)\n",
+    "one_year\n",
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
     "\n",
@@ -282,24 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('USC00519281', 2772),\n",
-       " ('USC00519397', 2724),\n",
-       " ('USC00513117', 2709),\n",
-       " ('USC00519523', 2669),\n",
-       " ('USC00516128', 2612),\n",
-       " ('USC00514830', 2202),\n",
-       " ('USC00511918', 1979),\n",
-       " ('USC00517948', 1372),\n",
-       " ('USC00518838', 511)]"
+       "<sqlalchemy.orm.query.Query at 0x1b1fa461420>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +315,10 @@
    "source": [
     "# Design a query to find the most active stations (i.e. which stations have the most rows?)\n",
     "# List the stations and their counts in descending order.\n",
-    "func.count"
+    "session.query(Measurement.station).order_by(func.count(Measurement.station.desc())).filter()\n",
+    "#order_by(Measurement.station.desc()).all()\n",
+    "#.distinct\n",
+    "#needs to print the list\n"
    ]
   },
   {
